# mdai-client-py

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  genindex.html  index.html  mdai.html  mdai.utils.html  modules.html  notes.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.html  setup.py  tests.html  tox.ini
.circleci/: config.yml
_modules/: index.html
_modules/mdai/: client.html  preprocess.html  visualize.html
_modules/mdai/utils/: common_utils.html  keras_utils.html  tensorflow_utils.html
_modules/tests/: test_preprocess.html  test_visualize.html
_sources/: index.rst.txt  mdai.rst.txt  modules.rst.txt
docs/: Makefile  conf.py  make.bat  mdai.utils.rst  tests.rst
mdai/: __init__.py  client.py  config.py  export.py  inference.py  preprocess.py  requirements.txt  utils.py  visualize.py
mdai/utils/: SR_SEG_utils.py  common_utils.py  dicom_utils.py  keras_utils.py  sample_SR.dcm  tensorflow_utils.py  transforms.py
notebooks/: MDai Simple API.ipynb  MDai_Simple_API.ipynb  ex-client-lib-training.ipynb  hello-world-fastai.ipynb  hello-world-keras.ipynb  hello-world-pill.ipynb  hello-world-tfrecords-VGG16.ipynb  mdai-api-hello-world.ipynb
tests/: conftest.py  test_preprocess.py  test_visualize.py
