[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F"]
# E501 is the "Line too long" error. We disable it because we use Black for
# code formatting. Black makes a best effort to keep lines under the max
# length, but can go over in some cases.
# E203: Whitespace before ':'. Conflicts with black formatting.
# E231: Missing whitespace after ',', ';', or ':'. Conflicts with black formatting.
ignore = ["E501", "E203", "E231"]

[tool.poetry]
name = "mdai"
version = "0.15.1"
description = "MD.ai Python client library"
license = "Apache-2.0"
authors = ["MD.ai <github@md.ai>"]
readme = "README.md"
homepage = "https://github.com/mdai/mdai-client-py"
repository = "https://github.com/mdai/mdai-client-py"
documentation = "https://docs.md.ai/annotator/python/installation/"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8"
arrow = "^1.3.0"
matplotlib = "^3.7.3"
nibabel = "^5.2.1"
numpy = "^1.24.0"
opencv-python = "^4.8.1.78"
pandas = "^2.0.0"
pillow = "^10.0.0"
pydicom = "^2.4.0"
requests = "^2.32.0"
retrying = "^1.3.4"
scikit-image = ">=0.21.0, <1.0.0"
tqdm = "^4.66.5"
dicom2nifti = "<2.6.0"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
ruff = "0.0.272"
pytest = "*"
sphinx = "*"
recommonmark = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
